Add ability to specify extra services

--- a/spec/projects/ruby/scenarios/one.docker-compose.yml
+++ b/spec/projects/ruby/scenarios/one.docker-compose.yml
@@ -11,5 +11,6 @@ services:
     - "bundle_one:/usr/local/bundle"
     environment:
       BUNDLE_GEMFILE: scenarios/one.gemfile
+    links: []
 volumes:
   bundle_one: {}
