--- a/spec/projects/databases/scenarios/mysql.docker-compose.yml
+++ b/spec/projects/databases/scenarios/mysql.docker-compose.yml
@@ -7,8 +7,8 @@ services:
       dockerfile: scenarios/mysql.dockerfile
     image: databases_scenario_mysql
     volumes:
-    - "..:/scenario"
-    - "bundle_mysql:/usr/local/bundle"
+    - ..:/scenario
+    - bundle_mysql:/usr/local/bundle
     environment:
       BUNDLE_GEMFILE: scenarios/mysql.gemfile
       RAILS_ENV: development
@@ -16,11 +16,11 @@ services:
       DATABASE_PORT: "3306"
       DATABASE_USER: root
     links:
-    - "mysql:database_host"
+    - mysql:database_host
   mysql:
-    image: "mysql:8.0"
+    image: mysql:8.0
     volumes:
-    - "data_mysql:/var/lib/mysql"
+    - data_mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: database_password
     links: []
