Add MySQL auth incantation

--- a/spec/projects/databases/scenarios.yml
+++ b/spec/projects/databases/scenarios.yml
@@ -25,6 +25,7 @@ scenarios:
     services:
       mysql:
         image: mysql:8.0
+        command: --default-authentication-plugin=mysql_native_password
         volumes:
           - "data_mysql:/var/lib/mysql"
         environment:
