Add MySQL auth incantation to correct file, fix retry logic

--- a/spec/projects/databases/scenarios/mysql.docker-compose.yml
+++ b/spec/projects/databases/scenarios/mysql.docker-compose.yml
@@ -19,6 +19,7 @@ services:
     - mysql:database_host
   mysql:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
     - data_mysql:/var/lib/mysql
     environment:
